--- a/praksa/package.json
+++ b/praksa/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
     "react-id-swiper": "^4.0.0",
     "swiper": "^11.0.6"
   },
